[package]
name = "eccer"
version = "0.1.2"
authors = ["Felix Stegmaier <stegmaier.felix@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std = { version = "1", features = ["attributes"] }
anyhow = "1"
async-stream = "0.3.4"
env_logger = "0.10.0"
etcd-client = "0.10.2"
futures-core = "0.3.27"
futures-util = "0.3.27"
log = "0.4.17"
nats = "0.24.0"
surf = "2.3.2"
serde = "1"
serde_json = "1"
structopt = "0.3.26"
thiserror = "1"
tide = "0.16.0"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
chrono = { version = "0.4.24", features = ["clock"] }
