[package]
name = "eccer"
version = "0.1.3"
authors = ["Felix Stegmaier <stegmaier.felix@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3.4"
axum = "0.6.18"
axum-prometheus = "0.3.3"
chrono = { version = "0.4.24", features = ["clock", "serde"] }
etcd-client = "0.11.1"
futures-core = "0.3.27"
futures-util = "0.3.27"
hyper = { version = "0.14.26", features = ["full"] }
nats = "0.24.0"
reqwest = "0.11.18"
serde = "1"
serde_json = "1"
structopt = "0.3.26"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = { version = "2", features = ["serde"] }

